<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:clipToPadding="false"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/feedCellCoverImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:elevation="5dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:contentDescription="@string/feed_cover_desc"/>

    <TextView
        android:id="@+id/feedCellTitle"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:text="@string/d_feed_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="220dp"
        android:layout_marginStart="15dp"
        android:layout_toStartOf="@+id/feedCellAvatar"/>

    <TextView
        android:id="@+id/feedCellType"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/d_feed_type"
        android:layout_marginTop="245dp"
        android:layout_marginStart="15dp"
        android:layout_toStartOf="@+id/feedCellAvatar"/>

    <TextView
        android:id="@+id/feedCellCreatedAt"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/d_feed_date"
        android:layout_marginTop="260dp"
        android:layout_marginStart="15dp"
        android:layout_toStartOf="@+id/feedCellAvatar"/>

    <ImageView
        android:id="@+id/feedCellAvatar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="175dp"
        android:layout_alignParentEnd="true"
        android:elevation="10dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:contentDescription="@string/feed_avatar_desc"
        />

    <TextView
        android:id="@+id/feedCellOwnerName"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:text="@string/d_name"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="250dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:background="@color/gray"/>
</RelativeLayout>
