<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/ripple_background">

    <ImageView
        android:id="@+id/settingUserAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/default_avatar"
        android:scaleType="centerCrop"
        android:contentDescription="@string/setting_default_avatar_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/settingUserAvatar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="21sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/d_setting_full_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="@string/d_setting_username"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="@string/d_setting_verify"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"/>

</RelativeLayout>