<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/settingOfflineAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/default_avatar"
        android:scaleType="centerCrop"
        android:contentDescription="@string/setting_default_avatar_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/settingOfflineAvatar"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/setting_offline_mode_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="@string/setting_offline_mode_sub"/>

        <Button
            android:id="@+id/settingReconnectButton"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:paddingTop="6dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:text="@string/setting_reconnect"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"/>

</RelativeLayout>