<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/SGNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@color/white">

        <Button
            android:id="@+id/userDetailBack"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="0dp"
            android:text="@string/setting_tab"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:background="?android:attr/selectableItemBackground"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@id/userDetailBack"
            android:layout_toStartOf="@id/userDetailSave"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/user_detail_fragment"/>

        <Button
            android:id="@+id/userDetailSave"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="0dp"
            android:layout_alignParentEnd="true"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:background="?android:attr/selectableItemBackground"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/userDetailList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:background="@color/lightGray"
        app:layoutManager="LinearLayoutManager"/>

</LinearLayout>