<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/life_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layoutManager="LinearLayoutManager"
            tools:context="com.fmning.wpi_csa.fragments.SGFragment"
            tools:listitem="@layout/fragment_paragraph" />

        <com.fmning.wpi_csa.helpers.LoadingView
            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true">

                <ProgressBar
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:indeterminate="true"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:theme="@style/ProgressBarGray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/feed_loading"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/serverDownView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_centerInParent="true"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/reload"
                    android:contentDescription="@string/feed_reload_desc"/>

                <TextView
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:autoLink="email"
                    android:text="@string/feed_network_issue"/>

            </LinearLayout>

        </com.fmning.wpi_csa.helpers.LoadingView>

    </RelativeLayout>



</android.support.v4.widget.SwipeRefreshLayout>