<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/SGNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@color/white">

        <Button
            android:id="@+id/userDetailBack"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="0dp"
            android:text="@string/title_activity_life"
            android:textColor="@color/colorAccent"
            android:drawableStart="@drawable/back_arrow_button_icon"
            android:gravity="start|center_vertical"
            android:textAllCaps="false"
            android:background="?android:attr/selectableItemBackground"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/title_fragment_feed"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/feedList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:background="@color/white"
            app:layoutManager="LinearLayoutManager"/>

        <com.fmning.wpi_csa.helpers.LoadingView
            android:id="@+id/feedLoadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true">

                <ProgressBar
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:indeterminate="true"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:theme="@style/ProgressBarGray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/feed_loading"/>

            </LinearLayout>

            <View
                android:id="@+id/serverDownView"
                android:layout_width="1dp"
                android:layout_height="1dp"/>

        </com.fmning.wpi_csa.helpers.LoadingView>

    </RelativeLayout>



</LinearLayout>